[gd_scene load_steps=11 format=3 uid="uid://dfrmqw7ye3q4c"]

[ext_resource type="Script" path="res://Main.gd" id="1_gc7xr"]
[ext_resource type="Script" path="res://Balloon.gd" id="2_mqb2n"]
[ext_resource type="Texture2D" uid="uid://jiy3i7v2ijwh" path="res://balloon_tileset.png" id="3_gwya0"]
[ext_resource type="Shader" path="res://balloonshader.gdshader" id="4_pqw75"]
[ext_resource type="Texture2D" uid="uid://c8eo4mf3rdwts" path="res://colour_map.png" id="5_uq6uo"]
[ext_resource type="Texture2D" uid="uid://dvjq7smemtxw0" path="res://green.png" id="6_r0sdw"]

[sub_resource type="Animation" id="Animation_amnt4"]
resource_name = "idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("balloon_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0), Vector2i(10, 0), Vector2i(11, 0), Vector2i(12, 0), Vector2i(13, 0), Vector2i(14, 0)]
}

[sub_resource type="Animation" id="Animation_fhp7b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("balloon_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rk6ct"]
_data = {
"RESET": SubResource("Animation_fhp7b"),
"idle": SubResource("Animation_amnt4")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_86fxe"]
shader = ExtResource("4_pqw75")
shader_parameter/width = null
shader_parameter/height = null
shader_parameter/fx = null
shader_parameter/fy = null

[node name="Main" type="Node2D"]
script = ExtResource("1_gc7xr")

[node name="Balloon" type="Node2D" parent="."]
script = ExtResource("2_mqb2n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Balloon"]
libraries = {
"": SubResource("AnimationLibrary_rk6ct")
}

[node name="balloon_sprite" type="Sprite2D" parent="Balloon"]
position = Vector2(4, 4)
texture = ExtResource("3_gwya0")
hframes = 16
vframes = 8

[node name="colour_filter" type="Sprite2D" parent="Balloon"]
material = SubResource("ShaderMaterial_86fxe")
position = Vector2(8, 4)
scale = Vector2(0.03125, 0.03125)
texture = ExtResource("6_r0sdw")

[node name="colour_map" type="Sprite2D" parent="Balloon"]
visible = false
position = Vector2(4, -4)
texture = ExtResource("5_uq6uo")
hframes = 2
